--- a/index.html
+++ b/index.html
@@ -117,27 +117,57 @@
     <p>Scopul școlii noastre este să sprijine fiecare elev în dobândirea cunoștințelor, dezvoltarea personalității și construirea unei vieți de succes. Instituția oferă un mediu incluziv și motivant pentru toți copiii.</p>
   </section>
 
-  <section id="profesori">
-    <h2>Profesori</h2>
-    <ul>
-      <li>Prof. Ana Pop – Limba română</li>
-      <li>Prof. Ion Mureșan – Matematică</li>
-      <li>Prof. Maria Ionescu – Istorie</li>
-      <li>Prof. Andrei Pavel – Educație fizică</li>
-    </ul>
-  </section>
+  
+<section id="profesori">
+  <h2>Profesori</h2>
+  <p><strong>Director:</strong> LUKÁCS ERIKA</p>
+  <ul>
+    <li>LUKÁCS ERIKA – Lb. română, Tehnologie, Ed. plastică</li>
+    <li>TAMAS ANDREA AMALIA – Lb. engleză, Lb. română, Informatică</li>
+    <li>Ozsváth Katalin – Lb. maghiară, Ed. plastică, Ed. socială</li>
+    <li>PEKÁRI ELLA – Prof. înv. primar</li>
+    <li>ILYES KINGA-NOEMI – Chimie, Fizică, TIC, Ed. tehnologică, Dirigenție</li>
+    <li>Fazakas Ildikó – Prof. Ed. timpurie</li>
+    <li>Máté Judit Mónika – Chimie, Fizică</li>
+    <li>SZÖLLŐSI ADÈL-RENÀTA – Prof. înv. primar</li>
+    <li>Bogdan Magdolna – Prof. înv. primar</li>
+    <li>Józsa Timea Tünde – Prof. înv. primar</li>
+    <li>Nagy Erzsébet – Matematică</li>
+    <li>ILLYÉS ILDIKÓ-RÉKA – Prof. Ed. timpurie</li>
+    <li>Boda Judit – Matematică, Fizică</li>
+    <li>Balla Éva Emőke – Istorie, Geografie</li>
+    <li>Barbur Enikő Mária – Prof. înv. primar</li>
+    <li>Szeghedi Kristina-Aretta – Prof. Ed. timpurie</li>
+    <li>Kovács Rózsa – Prof. Ed. timpurie</li>
+    <li>Varga Andrea – Prof. înv. primar</li>
+    <li>Nagy Erica Monica – Prof. înv. primar</li>
+    <li>Fodor Mária Gyöngyi – Religie, Biologie, Ed. tehnologică, Ed. plastică, Consiliere</li>
+    <li>Bălănean Anca – Lb. română, Lb. engleză</li>
+    <li>Futó Angela-Enikő – Limba și literatura maghiară, Educație socială, Educație plastică, Biologie, Diriginte clasa a VI-a și a VII-a (Consiliere)</li>
+    <li>Maghiar Natalia – Prof. înv. primar (secția română)</li>
+    <li>Demeter Boglarka – Sport</li>
+    <li>Márkus Bernad Kevin – Educație Fizică</li>
+    <li>Ungur Monika – Învățător</li>
+  </ul>
+</section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Adresă: Str. Principală, nr. 1, Panic, jud. Sălaj</p>
-    <p>Email: scoala.panic@example.com</p>
-    <form>
-      <input type="text" placeholder="Numele dvs" required />
-      <input type="email" placeholder="Email" required />
-      <textarea rows="5" placeholder="Mesajul dvs"></textarea>
-      <button type="submit">Trimite</button>
-    </form>
-  </section>
+
+  
+<section id="contact">
+  <h2>Contact</h2>
+  <p><strong>Adresă:</strong> Panic, str. Principală, nr. 100/A</p>
+  <p><strong>Telefon:</strong> 0260 669 854</p>
+  <p><strong>Fax:</strong> 0260 669 854</p>
+  <p><strong>Email:</strong> panit457171@yahoo.com</p>
+  <p><strong>Județ:</strong> Sălaj – ROMÂNIA</p>
+  <form>
+    <input type="text" placeholder="Numele dvs" required /><br/>
+    <input type="email" placeholder="Email" required /><br/>
+    <textarea rows="5" placeholder="Mesajul dvs"></textarea><br/>
+    <button type="submit">Trimite</button>
+  </form>
+</section>
+
 
   <footer>
     &copy; 2025 Școala Gimnazială Nr. 1 Panic
